@@ -30,11 +30,11 @@ export CXX = g++
 
 # OGDF library
 export OGDF_PATH = $(PWD)/../OGDF
-OGDF_LIB = $(OGDF_PATH)/_debug/libOGDF.a
+export OGDF_LIB = $(OGDF_PATH)/_debug/libOGDF.a
 
 export CXXFLAGS = -std=c++0x -Wall -Wextra -g
- #export LINKFLAGS = -lboost_regex -lgmpxx -lgmp -lboost_system -lboost_filesystem -lboost_program_options -ltcl -lboost_graph -lpthread $(OGDF_LIB)
-export LINKFLAGS = -lboost_regex -lgmpxx -lgmp -lboost_system -lboost_filesystem -lboost_program_options -ltcl -lboost_graph 
+export LINKFLAGS = -lboost_regex -lgmpxx -lgmp -lboost_system -lboost_filesystem -lboost_program_options -ltcl -lboost_graph -lpthread $(OGDF_LIB)
+#export LINKFLAGS = -lboost_regex -lgmpxx -lgmp -lboost_system -lboost_filesystem -lboost_program_options -ltcl -lboost_graph 
 
 # targets
 SUBDIRS = preproc averilog netlist shell shell/cmd cpptcl sdfg pugixml tool
